[tool.poetry]
name = "raspberry-pi-node-server"
version = "0.1.0"
description = ""
authors = ["lavish0000 <lavick100@gmail.com>"]
readme = "README.md"
packages = [{include = "raspberry_pi_node_server"}]

[tool.poetry.dependencies]
python = "^3.10"
substrateinterface = "^1.0.0"
uagents = "^0.3.1"
substrate-interface = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
